--- a/opp_gui/ui/polyline_path_selection_widget.ui
+++ b/opp_gui/ui/polyline_path_selection_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>409</width>
-    <height>185</height>
+    <height>192</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,6 +40,13 @@
     <widget class="QPushButton" name="push_button_htgen_polyline">
      <property name="text">
       <string>Apply Polyline To Generate Tool Path</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="push_button_sourc_polyline">
+     <property name="text">
+      <string>Save Polyline as Source</string>
      </property>
     </widget>
    </item>
