--- a/opp_gui/ui/polygon_area_selection_widget.ui
+++ b/opp_gui/ui/polygon_area_selection_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>409</width>
-    <height>114</height>
+    <height>145</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,6 +33,13 @@
     <widget class="QPushButton" name="push_button_apply_selection">
      <property name="text">
       <string>Apply Selection</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="cbox_update_selections">
+     <property name="text">
+      <string>Update Selections</string>
      </property>
     </widget>
    </item>
