--- a/opp_gui/ui/polyline_path_selection_widget.ui
+++ b/opp_gui/ui/polyline_path_selection_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>409</width>
-    <height>192</height>
+    <height>248</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -23,9 +23,9 @@
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="push_button_clear_polyline">
+    <widget class="QPushButton" name="push_button_htgen_polyline">
      <property name="text">
-      <string>Clear Polyline</string>
+      <string>Generate Heat Tool Path</string>
      </property>
     </widget>
    </item>
@@ -37,9 +37,16 @@
     </widget>
    </item>
    <item>
-    <widget class="QPushButton" name="push_button_htgen_polyline">
+    <widget class="QPushButton" name="push_button_clear_polyline">
      <property name="text">
-      <string>Apply Polyline To Generate Tool Path</string>
+      <string>Clear Polyline</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QCheckBox" name="cbox_update_polyline">
+     <property name="text">
+      <string>Update Polyline</string>
      </property>
     </widget>
    </item>
