--- a/opp_gui/ui/tool_path_parameters_editor.ui
+++ b/opp_gui/ui/tool_path_parameters_editor.ui
@@ -22,7 +22,7 @@
     </widget>
    </item>
    <item row="1" column="0" colspan="2">
-    <layout class="QFormLayout" name="form_layout_process_type">
+    <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label_process_type">
        <property name="text">
@@ -232,41 +232,57 @@
      <property name="maximum">
       <double>180.000000000000000</double>
      </property>
-    </widget>
-   </item>
-   <item row="11" column="0">
-    <layout class="QFormLayout" name="formLayout">
-     <item row="0" column="0">
-      <widget class="QCheckBox" name="checkBox_interleave_rasters">
-       <property name="text">
-        <string>Interleave Rasters</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QCheckBox" name="checkBox_smooth_rasters">
-       <property name="text">
-        <string>Smooth Rasters</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="0">
-      <widget class="QCheckBox" name="checkBox_generate_extra_rasters">
-       <property name="text">
-        <string>Generate Extra Rasters</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </item>
-   <item row="12" column="0">
-    <widget class="QPushButton" name="push_button_generate">
-     <property name="text">
-      <string>Generate</string>
+     <property name="value">
+      <double>0.010000000000000</double>
      </property>
     </widget>
    </item>
-   <item row="12" column="1">
+   <item row="11" column="0">
+    <widget class="QCheckBox" name="checkBox_interleave_rasters">
+     <property name="text">
+      <string>Interleave Rasters</string>
+     </property>
+    </widget>
+   </item>
+   <item row="12" column="0">
+    <widget class="QCheckBox" name="checkBox_smooth_rasters">
+     <property name="text">
+      <string>Smooth Rasters</string>
+     </property>
+    </widget>
+   </item>
+   <item row="13" column="0">
+    <widget class="QCheckBox" name="checkBox_generate_extra_rasters">
+     <property name="text">
+      <string>Generate Extra Rasters</string>
+     </property>
+    </widget>
+   </item>
+   <item row="14" column="0">
+    <widget class="QRadioButton" name="radioButton_mow_style">
+     <property name="text">
+      <string>Mow Style</string>
+     </property>
+    </widget>
+   </item>
+   <item row="15" column="0">
+    <widget class="QRadioButton" name="radioButton_paint_style">
+     <property name="text">
+      <string>Paint Style</string>
+     </property>
+    </widget>
+   </item>
+   <item row="16" column="0">
+    <widget class="QRadioButton" name="radioButton_read_style">
+     <property name="text">
+      <string>Read Style</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="16" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -278,6 +294,13 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="17" column="0">
+    <widget class="QPushButton" name="push_button_generate">
+     <property name="text">
+      <string>Generate</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
